<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portfolio">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SpotifyStreamer"
        android:id="@+id/spotifyStreamer"
        android:shadowColor="@android:color/background_dark"
        android:background="#ffff8334" android:layout_below="@+id/buildItBigger"
        android:layout_marginTop="10dp" android:clickable="false" android:enabled="true"
        android:layout_alignEnd="@+id/buildItBigger"
        android:layout_alignStart="@+id/buildItBigger"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScoresApp"
        android:id="@+id/scoresApp"
        android:background="#ffff8334" android:layout_below="@+id/libraryApp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignStart="@+id/nanoApps"
        android:layout_alignEnd="@+id/libraryApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LibraryApp"
        android:id="@+id/libraryApp"
        android:background="#ffff8334"
        android:layout_below="@+id/nanoApps"
        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
        android:layout_alignStart="@+id/nanoApps"
        android:layout_alignEnd="@+id/nanoApps" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/buildItBigger"
        android:background="#ffff8334" android:layout_below="@+id/scoresApp"
        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
       android:layout_alignEnd="@+id/scoresApp"
        android:layout_alignStart="@+id/scoresApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BaconReader"
        android:id="@+id/baconReader"
        android:background="#ffff8334" android:layout_below="@+id/spotifyStreamer"
        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
       android:layout_alignEnd="@+id/spotifyStreamer"
        android:layout_alignStart="@+id/spotifyStreamer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Capstone"
        android:id="@+id/capStone"
        android:background="#ffff2c66"
        android:layout_below="@+id/baconReader"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/baconReader"
        android:layout_alignStart="@+id/baconReader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NanoDegrees"
        android:id="@+id/nanoApps" android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
